--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/google/googletest.git
 [submodule "libs/libb64"]
 	path = libs/libb64
-	url = git://git.code.sf.net/p/libb64/git
+url=https://github.com/BuLogics/libb64.git
