--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/libb64"]
 	path = libs/libb64
 url=https://github.com/BuLogics/libb64.git
+[submodule "libs/cppcodec"]
+	path = libs/cppcodec
+	url = https://github.com/tplgy/cppcodec.git
