--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "libs/boost/utility"]
 	path = libs/boost/utility
 	url = https://github.com/boostorg/utility.git
+[submodule "libs/chromium/modp_b64"]
+	path = libs/chromium/modp_b64
+	url = https://chromium.googlesource.com/chromium/src/third_party/modp_b64
