Adding src to CMakeList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ AUX_SOURCE_DIRECTORY(./src/polfosol CTR_SOURCES)
 AUX_SOURCE_DIRECTORY(./src/user152949 CTR_SOURCES)
 AUX_SOURCE_DIRECTORY(./src/wikibooks.org CTR_SOURCES)
 AUX_SOURCE_DIRECTORY(./src/adition CTR_SOURCES)
+AUX_SOURCE_DIRECTORY(./src/A.Hristov CTR_SOURCES)
 AUX_SOURCE_DIRECTORY(./src/tomykaria CTR_SOURCES)
 AUX_SOURCE_DIRECTORY(./src/stov-180947 CTR_SOURCES)
 AUX_SOURCE_DIRECTORY(./src/libb64/libb64/src C_SOURCES)
