Fixed CMakeLists.txt for Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,4 +65,8 @@ SET_SOURCE_FILES_PROPERTIES( ${CTR_SOURCES} PROPERTIES LANGUAGE CXX )
 SET_SOURCE_FILES_PROPERTIES( ${C_SOURCES} PROPERTIES LANGUAGE C )
 
 ADD_EXECUTABLE(${NAME} ${CTR_SOURCES} ${C_SOURCES})
-TARGET_LINK_LIBRARIES(${NAME} gtest pthread)
+IF(UNIX AND (NOT APPLE))
+  TARGET_LINK_LIBRARIES(${NAME} gtest pthread stdc++fs)
+else()
+  TARGET_LINK_LIBRARIES(${NAME} gtest pthread)
+endif()
