--- a/.gitmodules
+++ b/.gitmodules
@@ -54,7 +54,11 @@
 	url = https://github.com/IMProject/IMUtility.git
 [submodule "libs/base64-tl"]
 	path = libs/base64-tl
-	url = git@github.com:tvercaut/base64.git
+	url = git@github.com:tobiaslocker/base64.git
+        branch = master
 [submodule "libs/base64pp"]
 	path = libs/base64pp
 	url = git@github.com:matheusgomes28/base64pp.git
+[submodule "libs/base64-aklomp"]
+	path = libs/base64-aklomp
+	url = git@github.com:aklomp/base64.git
