--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,6 @@
 [submodule "libs/googletest"]
 	path = libs/googletest
 	url = https://github.com/google/googletest.git
+[submodule "libs/base64rvv"]
+	path = libs/base64rvv
+	url = https://github.com/vogma/Base64
