--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ include(FetchContent)
 FetchContent_Declare(
   googletest
   GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG        750d67d809700ae8fca6d610f7b41b71aa161808
+  GIT_TAG        b514bdc898e2951020cbdca1304b75f5950d1f59
   SYSTEM
 )
 # For Windows: Prevent overriding the parent project's compiler/linker settings
@@ -23,6 +23,13 @@ set_target_properties(gtest PROPERTIES CXX_CLANG_TIDY "")
 set_target_properties(gtest_main PROPERTIES CXX_CLANG_TIDY "")
 set_target_properties(gmock PROPERTIES CXX_CLANG_TIDY "")
 set_target_properties(gmock_main PROPERTIES CXX_CLANG_TIDY "")
+
+# Get simdutf
+FetchContent_Declare(
+  simdutf
+  URL https://github.com/simdutf/simdutf/releases/download/v6.2.0/singleheader.zip
+)
+FetchContent_MakeAvailable(simdutf)
 
 add_subdirectory(./libs/base64pp)
 add_subdirectory(./libs/base64-aklomp)
@@ -56,6 +63,7 @@ aux_source_directory(./src/tomykaria CTR_SOURCES)
 aux_source_directory(./src/stov-180947 CTR_SOURCES)
 aux_source_directory(./src/libb64/libb64/src C_SOURCES)
 aux_source_directory(./src/picobase64 CTR_SOURCES)
+aux_source_directory(./src/simdutf CTR_SOURCES)
 
 aux_source_directory(./libs/chromium/modp_b64 CTR_SOURCES)
 aux_source_directory(./src/modp_b64_chromium CTR_SOURCES)
@@ -75,6 +83,8 @@ include_directories(libs/boost/mpl/include)
 include_directories(libs/boost/static_assert/include)
 include_directories(libs/boost/assert/include)
 aux_source_directory(./src/boost CTR_SOURCES)
+
+include_directories(${FETCHCONTENT_BASE_DIR}/simdutf-src)
 
 set_source_files_properties( ${CTR_SOURCES} PROPERTIES LANGUAGE CXX )
 set_source_files_properties( ${C_SOURCES} PROPERTIES LANGUAGE C )
