--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,6 @@
 [submodule "libs/googletest"]
 	path = libs/googletest
 	url = https://github.com/google/googletest.git
+[submodule "libs/boost/mp11"]
+	path = libs/boost/mp11
+	url = https://github.com/boostorg/mp11.git
